--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -1,7 +1,7 @@
 template(name='subreddit')
     unless subreddit_doc
         .ui.basic.center.aligned.segment
-            i.massive.fire.link.loading.grey.icon.get_info.shadowed2
+            i.massive.fire.link.grey.icon.get_info.shadowed2
             .ui.big.grey.header #{current_sub}...
     with subreddit_doc
         .ui.stackable.grid(style="background-image:url(#{data.banner_img}); margin-top:0px;, background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
@@ -105,13 +105,6 @@ template(name='subreddit')
                 +subreddit_best
                 +subreddit_newest
                 with emotion_avg
-                    .ui.list
-                        .item {{ to_percent avg_sent_score}}% sentiment
-                        .item {{ to_percent avg_joy_score}}% joy
-                        .item {{ to_percent avg_anger_score}}% anger
-                        .item {{ to_percent avg_sadness_score}}% sad
-                        .item {{ to_percent avg_disgust_score}}% disgust
-                        .item {{ to_percent avg_fear_score}}% fear
                     if is_positive
                         span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
                             |&nbsp;
