--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -23,7 +23,7 @@ template(name='rpage')
                         img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
                     else if watson.metadata.image
                         img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
-                    if is_youtube
+                    else if is_youtube
                         div
                         // .ui.fluid.embed
                         //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
@@ -35,7 +35,7 @@ template(name='rpage')
                         span.f11.full
                             |!{embed}
 
-                    if data.link_url
+                    else if data.link_url
                         img.ui.image.pointer.call_visual(src=data.link_url)
                     div
                     span.f12.say !{data.html}
