--- a/parts/reddit/user.jade
+++ b/parts/reddit/user.jade
@@ -44,8 +44,8 @@ template(name='user')
                     a.ui.circular.icon.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
                         i.external.icon
                     +print_this
-                    +user_top_emotions   
                 .twelve.wide.column
+                    +user_top_emotions   
                     // .ui.fluid.two.item.menu
                     //     .item posts
                     //     .item comments
@@ -100,26 +100,42 @@ template(name='user_comments')
                     
                     
 template(name='user_top_emotions')
-    .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.basic.large.label
-        | {{ to_percent avg_joy_score}}% joyful
-        | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
+    .ui.stackable.five.column.grid
+        .column
+            .ui.basic.header {{ to_percent avg_sent_score}} sentiment
+            .ui.green.basic.large.header
+                | {{ to_percent avg_joy_score}}% joyful
+                | {{fixed0 rep_joy}} joy karma
+            .ui.green.header ##{global_joy_rep_rank} joy karma rank
 
-    .ui.blue.basic.large.label
-        |{{fixed0 rep_sadness}} sad rep
-        | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
+        .column
+            .ui.blue.basic.large.header
+                | {{ to_percent avg_sadness_score}}% sad
+                
+            .ui.blue.basic.large.header
+                |{{fixed0 rep_sadness}} sad karma
+                |##{global_sadness_rep_rank} sad karma rank
 
-    .ui.red.basic.large.label 
-        | {{ to_percent avg_anger_score}}% angry
-        | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
+        .column
+            .ui.red.basic.large.header 
+                | {{ to_percent avg_anger_score}}% angry
+            .ui.red.basic.large.header 
+                | {{fixed0 rep_anger}} anger karma
+                |##{global_anger_rep_rank} anger karma rank
 
-    .ui.orange.basic.large.label
-        |{{fixed0 rep_disgust}} disgust rep
-        | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
+        .column
+            .ui.orange.basic.large.header
+                |{{fixed0 rep_disgust}} 
+            .ui.orange.basic.large.header
+                |disgust karma
+                | {{ to_percent avg_disgust_score}}% disgust 
+                |##{global_disgust_rep_rank} disgust karma rank
 
-    .ui.grey.basic.large.label
-        |{{fixed0 rep_fear}} fear rep
-        | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
+        .column
+            .ui.grey.basic.large.header
+                |{{fixed0 rep_fear}} fear rep
+            .ui.grey.basic.large.header
+                | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
 
                     
                                 
