smaller nav icons, undo auto wat on user_post and comment load, slight user emotions sizing

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,15 +4,15 @@ template(name='nav')
         //     i.bars.icon
     
         a.icon.item.blink(href="/" class="{{isActiveRoute regex='home'}}")
-            i.search.large.icon
+            i.search.icon
         // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-        //     i.search.large.icon
+        //     i.search.icon
         a.icon.item.blink(href="/subs" class="{{isActiveRoute regex='sub'}}")
-            i.large.fire.icon
+            i.fire.icon
         // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-        //     i.stack.exchange.large.icon
+        //     i.stack.exchange.icon
         a.icon.item.blink(href="/users" class="{{isActiveRoute regex='user'}}")
-            i.users.large.icon
+            i.users.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
         //     |#{session_clicks}
