--- a/parts/reddit/user.jade
+++ b/parts/reddit/user.jade
@@ -43,7 +43,9 @@ template(name='user')
                     img.ui.rounded.inline.image.pointer.zoomer(src=profile_image)
                     a.ui.circular.icon.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
                         i.external.icon
-                    +print_this
+                    if in_dev
+                        +print_this
+                    .ui.basic.header {{ to_percent avg_sent_score}} sentiment
                 .twelve.wide.column
                     +user_top_emotions   
                     // .ui.fluid.two.item.menu
@@ -102,40 +104,45 @@ template(name='user_comments')
 template(name='user_top_emotions')
     .ui.stackable.five.column.grid
         .column
-            .ui.basic.header {{ to_percent avg_sent_score}} sentiment
-            .ui.green.basic.large.header
+            .ui.green.header
                 | {{ to_percent avg_joy_score}}% joyful
+            .ui.green.basic.small.header
                 | {{fixed0 rep_joy}} joy karma
-            .ui.green.header ##{global_joy_rep_rank} joy karma rank
+            .ui.green.small.header ##{global_joy_rep_rank} joy karma rank
 
         .column
-            .ui.blue.basic.large.header
+            .ui.blue.header
                 | {{ to_percent avg_sadness_score}}% sad
                 
-            .ui.blue.basic.large.header
+            .ui.blue.basic.small.header
                 |{{fixed0 rep_sadness}} sad karma
-                |##{global_sadness_rep_rank} sad karma rank
+            .ui.blue.basic.small.header
+                |##{global_sadness_rep_rank} rank
 
         .column
-            .ui.red.basic.large.header 
+            .ui.red.header 
                 | {{ to_percent avg_anger_score}}% angry
-            .ui.red.basic.large.header 
+            .ui.red.small.header 
                 | {{fixed0 rep_anger}} anger karma
-                |##{global_anger_rep_rank} anger karma rank
+            .ui.red.small.header 
+                |##{global_anger_rep_rank} rank
 
         .column
-            .ui.orange.basic.large.header
+            .ui.orange.header
+                | {{ to_percent avg_disgust_score}}% disgust
+            .ui.orange.small.header
                 |{{fixed0 rep_disgust}} 
-            .ui.orange.basic.large.header
                 |disgust karma
-                | {{ to_percent avg_disgust_score}}% disgust 
-                |##{global_disgust_rep_rank} disgust karma rank
+            .ui.orange.small.header
+                |##{global_disgust_rep_rank} rank
 
         .column
-            .ui.grey.basic.large.header
+            .ui.grey.header
                 |{{fixed0 rep_fear}} fear rep
-            .ui.grey.basic.large.header
-                | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
+            .ui.grey.small.header
+                | {{ to_percent avg_fear_score}}% 
+            .ui.grey.small.header
+                ##{global_fear_rep_rank} rank
 
                     
                                 
