unblock most publications, start of fully manual trigger policy

--- a/client/watson.jade
+++ b/client/watson.jade
@@ -98,15 +98,16 @@ template(name='doc_emotion_small')
     span.rounde(style="height:3px;width:{{to_percent anger_percent}}%;background-color:red" title="{{to_percent anger_percent}}% anger")
     // .spacer
 template(name='call_watson')
-    button.ui.large.fluid.basic.button.autotag
+    button.ui.big.fluid.basic.button.autotag
         i.dna.icon
         if current_doc.watson 
             i.checkmark.green.icon
-        |autotag
+        |download and analyze
 
 template(name='autotag')
-    button.ui.large.icon.button.autotag
+    button.ui.large.button.autotag
         i.dna.icon
+        |download and analyze
         // |autotag
         if watson 
             i.checkmark.icon
