--- a/parts/reddit/user.jade
+++ b/parts/reddit/user.jade
@@ -33,6 +33,15 @@ template(name='user')
                             .item #{awardee_karma} awardee karma
                             .item #{awarder_karma} awarder karma
                             .item created {{ufrom created_utc}}
+                        .ui.circular.basic.button.refresh_info
+                            i.refresh.icon
+                            |refresh info
+                        .ui.circular.basic.button.refresh_stats
+                            i.refresh.icon
+                            |refresh stats
+                        .ui.circular.basic.button.refresh_rank
+                            i.line.chart.icon
+                            |refresh rank
                         if is_gold
                             i.large.yellow.star.icon(title='is gold')
                         if is_mod
@@ -89,6 +98,7 @@ template(name='user_comments')
         i.chat.outline.icon
         |#{user_comments.count}
         |comments
+    i.refresh.grey.link.icon.refresh_comments(title='refresh posts')
     each user_comment_tag_results
         // .ui.label #{this}
         // +user_post_selector
@@ -107,15 +117,15 @@ template(name='user_top_emotions')
             .ui.green.header
                 | {{ to_percent avg_joy_score}}% joyful
             .ui.green.basic.small.header
-                | {{fixed0 rep_joy}} joy karma
-            .ui.green.small.header ##{global_joy_rep_rank} joy karma rank
+                | {{fixed0 rep_joy}} karma
+            .ui.green.small.header ##{global_joy_rep_rank} rank
 
         .column
             .ui.blue.header
                 | {{ to_percent avg_sadness_score}}% sad
                 
             .ui.blue.basic.small.header
-                |{{fixed0 rep_sadness}} sad karma
+                |{{fixed0 rep_sadness}} karma
             .ui.blue.basic.small.header
                 |##{global_sadness_rep_rank} rank
 
@@ -123,7 +133,7 @@ template(name='user_top_emotions')
             .ui.red.header 
                 | {{ to_percent avg_anger_score}}% angry
             .ui.red.small.header 
-                | {{fixed0 rep_anger}} anger karma
+                | {{fixed0 rep_anger}} karma
             .ui.red.small.header 
                 |##{global_anger_rep_rank} rank
 
@@ -132,15 +142,15 @@ template(name='user_top_emotions')
                 | {{ to_percent avg_disgust_score}}% disgust
             .ui.orange.small.header
                 |{{fixed0 rep_disgust}} 
-                |disgust karma
+                | karma
             .ui.orange.small.header
                 |##{global_disgust_rep_rank} rank
 
         .column
             .ui.grey.header
-                |{{fixed0 rep_fear}} fear rep
+                | {{ to_percent avg_fear_score}}% fear
             .ui.grey.small.header
-                | {{ to_percent avg_fear_score}}% 
+                |{{fixed0 rep_fear}} karma
             .ui.grey.small.header
                 ##{global_fear_rep_rank} rank
 
