--- a/parts/subreddit.jade
+++ b/parts/subreddit.jade
@@ -2,7 +2,7 @@ template(name='subreddit')
     unless subreddit_doc
         .ui.basic.center.aligned.segment
             i.massive.fire.link.grey.icon.get_info.shadowed2
-            .ui.big.grey.header #{current_sub}...
+            .ui.big.grey.header #{current_sub}
     with subreddit_doc
         .ui.stackable.grid(style="background-image:url(#{data.banner_img}); margin-top:0px;, background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
             .twelve.wide.column.seg
