--- a/parts/user.jade
+++ b/parts/user.jade
@@ -7,7 +7,7 @@ template(name='user')
         .ui.center.aligned.basic.segment.search
             i.massive.grey.user.outline.link.icon.get_user_info
             .ui.big.header
-                |#{current_username}...
+                |#{current_username}
         // .ui.massive.fluid.button.f17.zoomer.pointer.search 
         //     i.download.icon
             // |download user info
