--- a/parts/post.jade
+++ b/parts/post.jade
@@ -167,14 +167,16 @@ template(name='rcomments_tab')
                 
                 
 template(name='rcomment')                
-    .ui.grid.call_watson_comment
+    // .ui.grid.call_watson_comment
+    .ui.grid
         .sixteen.wide.column
             .ui.small.inline.header {{data.score}}
             a.author.inline.say(href="/user/#{data.author}") #{data.author}
             span.metadata 
                 span.date {{ufrom data.created}}
+                i.refresh.icon.get_comment_emotion
                 +doc_emotion_small
-            .pointer.inline.say(class=post_header_class)
+            .pointer.inline.say.autotag_watson(class=post_header_class)
                 |{{#markdown}} {{data.body}} {{/markdown}}
             each tags 
                 +flat_sub_tag_picker
