--- a/parts/post.jade
+++ b/parts/post.jade
@@ -174,7 +174,8 @@ template(name='rcomment')
             a.author.inline.say(href="/user/#{data.author}") #{data.author}
             span.metadata 
                 span.date {{ufrom data.created}}
-                i.smile.large.link.icon.get_comment_emotion
+                unless max_emotion_percent
+                    i.smile.large.link.outline.icon.get_comment_emotion
                 +doc_emotion_small
             .pointer.inline.say.autotag_watson(class=post_header_class)
                 |{{#markdown}} {{data.body}} {{/markdown}}
