--- a/parts/users.jade
+++ b/parts/users.jade
@@ -106,7 +106,7 @@ template(name='user_small')
                 +print_this
      
 template(name='sort_button')     
-    .ui.compact.icon.circular.button.sort(class="#{c} #{button_class}")
+    .ui.compact.icon.circular.button.sort(class="#{c} #{button_class}" title='sort by #{l}')
         // if i 
         i.large.icon(class=i)
         // |#{l} karma
