--- a/client/home.jade
+++ b/client/home.jade
@@ -62,17 +62,11 @@ template(name='nav')
 template(name='layout')
     +nav
     +yield
-        // .ui.bottom.attached.pushable.segment
-        // // +topbar
-        // // +leftbar
-        // // +rightbar
-                
-        // #main_area.global_container.pusher
-    
-    // .ui.bottom.attached.pushable.segment
-    //     #main_area.pusher(class=currentUser.invert_class)
-    
 
+
+template(name='view_layout_button')    
+    .ui.circular.icon.basic.button
+        i.icon(class=icon)
             
 
 template(name='not_found')
