round of combining reactivearrays, adding working domain and author facets in main search, make three column grid to one in middle

--- a/parts/search.jade
+++ b/parts/search.jade
@@ -1,5 +1,5 @@
 template(name='home')
-    .ui.stackable.grid.inline
+    .ui.stackable.grid
         .row
             .sixteen.wide.column
                 // if skv_is 'nightmode' true
@@ -69,18 +69,8 @@ template(name='home')
                         // .ui.label #{this}
                         +tag_picker
                         // .ui.label(title=count) #{name}
-                        
         .row
             .ui.four.wide.column
-                if picked_tags
-                    +sort_button l='total' i='yin yang' key='data.total_karma'
-                    +sort_button l='link' i='edit' key='data.link_karma'
-                    +sort_button l='comment' i='chat outline' key='data.comment_karma'
-                    +sort_button l='joy' i='smile' c='green' key='rep_joy'
-                    +sort_button l='anger' i='frown' c='red' key='rep_anger'
-                    +sort_button l='sadness' i='frown' c='blue' key='rep_sadness'
-                    +sort_button l='disgust' i='frown' c='orange' key='rep_disgust'
-                    +sort_button l='fear' i='frown' c='grey' key='rep_fear'
                 +alpha
                 each wikis
                     .ui.card
@@ -106,12 +96,50 @@ template(name='home')
                     //             +card
                         // else if three_posts
                     // else
-            .ui.twelve.wide.column.scrolling
-                .ui.stackable.three.column.grid
-                    each rposts
-                        +card
-                //     .ui.basic.center.aligned.segment
-                //         i.big.loading.yin.yang.icon
+            if picked_tags
+                .ui.eight.wide.column
+                    +sort_direction_button
+                    +limit_button value=1
+                    +limit_button value=10
+                    +limit_button value=20
+                    +view_layout_button label='grid' icon='th'
+                    +view_layout_button label='list' icon='list'
+                    +sort_button l='upvotes' i='thumbs up outline' key='data.ups'
+                    +sort_button l='comments' i='chat outline' key='data.comment_count'
+                    +sort_button l='joy' i='smile' c='green' key='rep_joy'
+                    +sort_button l='anger' i='frown' c='red' key='rep_anger'
+                    +sort_button l='sadness' i='frown' c='blue' key='rep_sadness'
+                    +sort_button l='disgust' i='frown' c='orange' key='rep_disgust'
+                    +sort_button l='fear' i='frown' c='grey' key='rep_fear'
+                
+                    .ui.stackable.one.column.grid.scrolling
+                        each rposts
+                            +card
+                    //     .ui.basic.center.aligned.segment
+                    //         i.big.loading.yin.yang.icon
+                .ui.four.wide.column
+                    .ui.inline.small.header
+                        i.globe.icon
+                        |domains
+                    each picked_domains
+                        .ui.black.label.unpick_domain
+                            |#{this}
+                    each domain_results
+                        .ui.basic.label.pick_domain(class=domain_selector_class)
+                            |#{name} 
+                            small #{count}
+                    div
+                    .ui.inline.small.header
+                        i.clock.icon    
+                        |authors
+                    each picked_authors
+                        .ui.black.label.unpick_author
+                            |#{this}
+                    each author_results
+                        .ui.basic.label.pick_author(class=domain_selector_class)
+                            |#{name} 
+                            small #{count}
+                    // .ui.inline.header.pull_latest #{display_name}
 
 
 template(name='search_shortcut')
@@ -149,6 +177,10 @@ template(name='card')
             |{{ufrom data.created_utc}}
             each unique_tags
                 a.ui.basic.label.flat_tag_pick #{this}
+            .ui.label #{data.domain}
+            .ui.label 
+                i.user.icon
+                |#{data.author}
             a.black_text(href="r/#{sub}/post/#{_id}")
                 |{{ trunc analyzed_text }}...
             +print_this
