--- a/parts/user.jade
+++ b/parts/user.jade
@@ -186,7 +186,7 @@ template(name='user_top_emotions')
             .ui.grey.small.header
                 |{{fixed0 rep_fear}} karma
             .ui.grey.small.header
-                ##{global_fear_rep_rank} rank
+                |##{global_fear_rep_rank} rank
 
                     
                             
